# stackdiff

./: .gitignore  README.md  pyproject.toml
stackdiff/: annotator.py  changelog.py  cli.py  cli_changelog.py  cli_graph.py  cli_heatmap.py  cli_matrix.py  cli_profile.py  cli_snapshot.py  cli_tagger.py  differ.py  differ_graph.py  differ_heatmap.py  differ_matrix.py  differ_stats.py  differ_timeline.py  exporter.py  filter.py  formatter.py  linter.py  parser.py  pipeline.py  profiler.py  reporter.py  scorer.py  serializer.py  snapshot_compare.py  snapshotter.py  sorter.py  summarizer.py  tagger.py  validator.py
tests/: test_annotator.py  test_changelog.py  test_cli.py  test_cli_graph.py  test_cli_heatmap.py  test_cli_snapshot.py  test_cli_tagger.py  test_differ_graph.py  test_differ_heatmap.py  test_differ_matrix.py  test_differ_stats.py  test_differ_timeline.py  test_exporter.py  test_filter_and_sorter.py  test_formatter.py  test_linter.py  test_parser_and_differ.py  test_pipeline.py  test_profiler.py  test_reporter_and_serializer.py  test_scorer.py  test_snapshotter.py  test_summarizer.py  test_tagger.py  test_validator.py
